US-3 Made limited tests.

--- a/angular.json
+++ b/angular.json
@@ -82,5 +82,8 @@
                 }
             }
         }
+    },
+    "cli": {
+      "analytics": "fc376d42-f181-4a93-92cb-cc3012dcdd19"
     }
 }
