--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,14 @@ name: Branch protection frontend
 
 on:
   push:
-    branches: [main]
+    branches: [main, dev, feature-Online-Users-Current]
   pull_request:
     branches: [dev, main]
 
-
-    
+jobs:
+  Test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v3
+      - run: npm run test_ci
