--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,5 +11,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v3
-      - run: npm run test_ci
+      - name: Use Node.js 18.x
+        uses: actions/setup-node@v2
+        with:
+          node-version: 18.x
+          cache: "npm"
+          cache-dependency-path: package-lock.json
+      - name: Installeer alle packages
+        run: npm i
+
+      - name: Run tests
+        run: npm run test_ci
