--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
     branches: [dev, main]
 
 jobs:
-  Test:
+  Test-Frontend:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
