--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Branch protection frontend
 
 on:
   push:
-    branches: [main, dev, feature-Online-Users-Current]
+    branches: [main, dev]
   pull_request:
     branches: [dev, main]
 
