--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Branch protection frontend
 
 on:
   push:
-    branches: [main, dev, feature-CI-Sonar]
+    branches: [main, dev]
   pull_request:
     branches: [dev, main]
 
@@ -20,7 +20,7 @@ jobs:
       - name: Installeer alle packages
         run: npm i
 
-      - name: Use static code analysis
+      - name: Run static code analysis with ESLint
         run: npm run lint
 
       - name: Run tests
