--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/router": "^16.0.0",
     "@microsoft/signalr": "^7.0.5",
     "bootstrap": "^5.3.0",
+    "jwt-decode": "^3.1.2",
     "ngx-webcam": "^0.4.1",
     "rxjs": "~7.8.0",
     "signalr": "^2.4.3",
