--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.3.0",
     "crypto-js": "^3.1.9-1",
+    "jsencrypt": "^3.3.2",
     "jwt-decode": "^3.1.2",
     "ngx-webcam": "^0.4.1",
     "rxjs": "~7.8.0",
