--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@angular-devkit/build-angular": "^16.0.4",
     "@angular/cli": "~16.0.4",
     "@angular/compiler-cli": "^16.0.0",
+    "@types/crypto-js": "^4.1.1",
     "@types/dom-mediacapture-record": "^1.0.16",
     "@types/jasmine": "~4.3.0",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
