--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "bootstrap": "^5.3.0",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.3.0",
-    "crypto-js": "^3.1.9-1",
+    "crypto-js": "^3.3.0",
     "jsencrypt": "^3.3.2",
     "jwt-decode": "^3.1.2",
     "ngx-webcam": "^0.4.1",
@@ -41,6 +41,7 @@
     "@angular-devkit/build-angular": "^16.0.4",
     "@angular/cli": "~16.0.4",
     "@angular/compiler-cli": "^16.0.0",
+    "@types/crypto-js": "^4.1.1",
     "@types/dom-mediacapture-record": "^1.0.16",
     "@types/jasmine": "~4.3.0",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
