--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@microsoft/signalr": "^7.0.5",
     "bootstrap": "^5.3.0",
     "crypto-js": "^3.3.0",
+    "hls.js": "^1.4.7",
     "jsencrypt": "^3.3.2",
     "jwt-decode": "^3.1.2",
     "rxjs": "~7.8.0",
